tests/errors/preprocessor/incorrect/after_preproces_words_must_be_space_3.c
#define K #define KE 1 #include "after_preproces_words_must_be_space_1.c"
K
KE
int main ()
{
	return 0;
}